remove social media icon

--- a/login.html
+++ b/login.html
@@ -22,11 +22,11 @@
 				<button type="button" class="toggle-btn" id="log" onclick="login()" style="color: #fff;">Log In</button>
 				<button type="button" class="toggle-btn" id="reg" onclick="register()">Register</button>
 			</div>
-			<div class="social-icons">
+			<!-- <div class="social-icons">
 				<img src="images/icon/fb2.png">
 				<img src="images/icon/insta2.png">
 				<img src="images/icon/tt2.png">
-			</div>
+			</div> -->
 			
 			<!-- Login Form -->
 			<form id="login" class="input-group" action="index.html">
