--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<link rel="shortcut icon" type="png" href="images/icon/favicon.png">
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Comaptible" content="IE=edge">
-	<title>CodeCraze</title>
+	<title>MindBridge</title>
 	<meta name="desciption" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	<script type="text/javascript" src="script.js"></script>
 	<script src="https://code.jquery.com/jquery-3.2.1.js"></script>
 	<script>
@@ -38,12 +39,14 @@
         <div class="quote">
             <p>The beautiful thing about learning is that nobody can take it away from you</p>
             <h5>Education is the process of facilitating learning, or the acquisition of knowledge, skills, values, beliefs, and habits. Educational methods include teaching, training, storytelling, discussion and directed research!</h5>
+            <button type="button" class="btn start-learn">Start Learning</button>
+            <a href="quiz.html" class="btn btn-outline-primary take-quiz">Take Quiz</a>
+
         </div>
         <div class="svg-image">
             <img src="images/extra/svg1.jpg" alt="svg">
         </div>
     </div>
-    -->
 </header>
 
 <!-- Some Popular Subjects -->
