login css changes

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 <table>
     <thead>
         <tr>
-          <th scope="col">Topics</th>
-          <th scope="col">Link</th>
+          <th scope="col">Software Engineering Topics</th>
+          <th scope="col"></th>
         </tr>
       </thead>
       <tbody>
@@ -70,23 +70,74 @@
             <td data-label="Sales"><a style="color: red;" href="https://youtube.com/watch?v=7t0YJWTjmdI&list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&index=7&ab_channel=GateSmashers">link</a></td>
         </tr>
         <tr>
-            <td data-label="Topics"></td>
-            <td data-label="Sales"><a style="color: red;" href="">link</a></td>
+            <td data-label="Topics">SDLC Life Cycle for Beginners</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=kSU2MPeptpM&list=PLxCzCOWd7aiEed7SKZBnC6ypFDWYLRvB2&index=3">link</a></td>
+        </tr>
+        <tr>
+            <td data-label="Topics">Classic Waterfall model in Software Engineering</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=noE3pnRzQGI&list=PLxCzCOWd7aiEed7SKZBnC6ypFDWYLRvB2&index=4">link</a></td>
+        </tr>
+        <tr>
+            <td data-label="Topics">Iterative Waterfall Model with example</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=vl-IWe0DkwU&list=PLxCzCOWd7aiEed7SKZBnC6ypFDWYLRvB2&index=5">link</a></td>
+        </tr>
+        <tr>
+            <td data-label="Topics">V Shaped Model with examples</td>
+            <td data-label="Sales"><a style="color: red;" href="https://youtube.com/watch?v=algSKfQ03Sk&list=PLxCzCOWd7aiEed7SKZBnC6ypFDWYLRvB2&index=6">link</a></td>
         </tr>
         <tr>
             <td data-label="Topics"></td>
-            <td data-label="Sales"><a style="color: red;" href="">link</a></td>
+            <td data-label="Sales"><a style="color: red;" href=""></a></td>
+        </tr>
+    </tbody>
+
+        <thead>
+            <tr>
+              <th scope="col">CNIOT  Topics</th>
+              <th scope="col"></th>
+            </tr>
+          </thead>
+        <tbody>
+          <tr>
+            <td data-label="Topics">Introduction to Computer Network | OSI MODEL</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=4D55Cmj2t-A&list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&index=2">link</a></td>
+        </tr>
+          <tr>
+            <td data-label="Topics">LAN, MAN, WAN, PAN , CAN</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=n0iaPtsnmxQ&list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&index=3">link</a></td>
+        </tr>
+          <tr>
+            <td data-label="Topics">TCP/IP Protocol Suite | Internet Protocol Suite | OSI vs TCP/IP</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=GfaHdjApnhU&list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&index=4">link</a></td>
+        </tr>
+          <tr>
+            <td data-label="Topics">Physical layer|Functions of physical layer</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=lg-f92uY1Lc&list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&index=5">link</a></td>
+        </tr>
+          <tr>
+            <td data-label="Topics">Manchester encoding and differential Manchester encoding</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=3IaB2a8tXLA&list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&index=8 ">link</a></td>
+        </tr>
+          <tr>
+            <td data-label="Topics">Types Of Cables|Coaxial, twisted pair, fibre optic cable
+            </td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=wuI6FGsOFZU&list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&index=10">link</a></td>
+        </tr>
+          <tr>
+            <td data-label="Topics">Collision Domain Vs. Broadcast Domain</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=301XUVtn-6s&list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&index=16">link</a></td>
         </tr>
         <tr>
-            <td data-label="Topics"></td>
-            <td data-label="Sales"><a style="color: red;" href="">link</a></td>
+            <td data-label="Topics">What is Circuit Switching</td>
+            <td data-label="Sales"><a style="color: red;" href="https://www.youtube.com/watch?v=Cug52cpjM_g&list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&index=17">link</a></td>
         </tr>
         <tr>
-            <td data-label="Topics"></td>
-            <td data-label="Sales"><a style="color: red;" href="">link</a></td>
-        </tr>
+          <td data-label="Topics"></td>
+          <td data-label="Sales"><a style="color: red;" href="">link</a></td>
+      </tr>
         <!-- Add more rows as needed -->
       </tbody>
+    
   </table>
 
 <!-- ABOUT
